# django-tutorial

./: .pdm.toml  README.md  pyproject.toml
mysite/: settings.py
polls/: tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html
