[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Erik S. Carlsten <ecarlste@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
