[project]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Erik S. Carlsten", email = "ecarlste@gmail.com"},
]
dependencies = ["django==4.1.7"]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool.pdm.build]
includes = []


[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
]


[tool.pdm.scripts]
start = "python manage.py runserver"
migrate = "python manage.py migrate"
