[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Erik S. Carlsten <ecarlste@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.8"
pytz = "2019.3"
sqlparse = "0.4.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
